--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -169,6 +169,10 @@ on post-fs
 #    setprop sys.mobicoredaemon.enable stopped
 
 on post-fs-data
+    # avoid USB crash
+    setprop persist.adb.nonblocking_ffs 0
+    setprop ro.adb.nonblocking_ffs 0
+
 # [ SEC_SELINUX_PORTING_COMMON
     # Reload SE Android Policy
     setprop selinux.reload_policy 1
