--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -7,13 +7,9 @@ import /vendor/etc/init/hw/init.rilchip.rc
 import /vendor/etc/init/hw/init.samsung.rc
 
 on early-init
-#    mkdir /efs 0771 radio system
-#    mkdir /cpefs 0771 radio system
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 on init
     start watchdogd
-
-    mkdir /preload 0771 system system
 
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -311,12 +307,6 @@ on fs
     chown system system /sys/class/mdnie/mdnie/hmt_color_temperature
     chmod 0660 /sys/class/mdnie/mdnie/hmt_color_temperature
 
-# For cpefs partition
-#    check_fs /dev/block/platform/13540000.dwmmc0/by-name/CPEFS ext4
-#    mount ext4 /dev/block/platform/13540000.dwmmc0/by-name/CPEFS /cpefs noatime nosuid nodev barrier=1
-    chown radio system /cpefs
-    chmod 0771 /cpefs
-
 # Copy DRM Key
     copy /system/app/wv.keys /factory/wv.keys
 
@@ -417,6 +407,7 @@ service argos-daemon /system/bin/argosd
 # LPM
 service charger /charger
     class charger
+    critical
     seclabel u:r:charger:s0
 
 # Bluetooth
