--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -6,13 +6,9 @@ import /vendor/etc/init/hw/init.wifi.rc
 import /vendor/etc/init/hw/init.samsung.rc
 
 on early-init
-#    mkdir /efs 0771 radio system
-#    mkdir /cpefs 0771 radio system
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 on init
     start watchdogd
-
-    mkdir /preload 0771 system system
 
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -320,12 +316,6 @@ on fs
     chown system system /sys/class/mdnie/mdnie/hmt_color_temperature
     chmod 0660 /sys/class/mdnie/mdnie/hmt_color_temperature
 
-# For cpefs partition
-#    check_fs /dev/block/platform/13540000.dwmmc0/by-name/CPEFS ext4
-#    mount ext4 /dev/block/platform/13540000.dwmmc0/by-name/CPEFS /cpefs noatime nosuid nodev barrier=1
-    chown radio system /cpefs
-    chmod 0771 /cpefs
-
 # Copy DRM Key
     copy /system/app/wv.keys /factory/wv.keys
 
@@ -433,6 +423,7 @@ service gpsd /vendor/bin/hw/gpsd -c /vendor/etc/gps.xml
 # LPM
 service charger /charger
     class charger
+    critical
     seclabel u:r:charger:s0
 
 # Bluetooth
