--- a/rootdir/init.samsungexynos7870.rc
+++ b/rootdir/init.samsungexynos7870.rc
@@ -191,8 +191,7 @@ service gpsd /vendor/bin/hw/gpsd -c /vendor/etc/gps.xml
     ioprio be 0
     seclabel u:r:gpsd:s0
 
-# LPM
-service charger /charger
+service charger /system/bin/charger
     class charger
     critical
     seclabel u:r:charger:s0
