--- a/hidl/sensors/android.hardware.sensors@1.0-service.gtaxlwifi.rc
+++ b/hidl/sensors/android.hardware.sensors@1.0-service.gtaxlwifi.rc
@@ -1,4 +1,4 @@
-service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service
+service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service.gtaxlwifi
     class hal
     user system
     group system wakelock uhid
